# MMSP-Spec

./: .gitignore  IETF-PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
docs/: _config.yml  index.md  robots.txt
docs/_includes/: custom-head.html  header.html
docs/_layouts/: default.html
docs/assets/: main.scss
docs/assets/css/: style.scss
spec/: draft-ernster-mmsp-00.md  draft-mmsp-00.md
spec/examples/: full-feed.json  minimal-feed.json
spec/schema/: mmsp-feed.schema.json  mmsp-item.schema.json
tests/: conftest.py  test_atom_normalization.py  test_authenticity.py  test_discovery.py  test_error_handling.py  test_feed_schema.py  test_filter_grammar.py  test_item_schema.py  test_item_tolerance.py  test_media_types.py  test_pagination.py  test_poll_semantics.py  test_rss_normalization.py  test_series_episodes.py  test_versioning.py
tests/validators/: discovery.py  filter.py  normalizer.py  poll.py  schema.py
