[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mmsp-conformance"
version = "0.1.0"
description = "MMSP specification conformance test suite"
authors = [{ name = "MMSP Community" }]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0",
    "referencing>=0.35.0",
    "requests>=2.32.0",
    "responses>=0.25.0",
    "feedparser>=6.0.11",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-httpserver>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tests/validators --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["tests/validators"]
branch = true

[tool.coverage.report]
show_missing = true
